--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./styles/main.css">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <h1 class="article">Tic Tac Toe</h1>
+    <div class="game"></div>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
