--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
     <h1 class="article">Tic Tac Toe</h1>
+    <div class="alert">
+      <h5 class="winnerO">Виграли Нолики!</h5>
+      <h5 class="winnerX">Виграли Хрестики!</h5>
+      <h5 class="winnerXO">Ніхто не виграв!</h5>
+      <div class="button">Reset</div>
+    </div>
     <div class="game"></div>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
