--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <h5 class="winnerO">Виграли Нолики!</h5>
       <h5 class="winnerX">Виграли Хрестики!</h5>
       <h5 class="winnerXO">Ніхто не виграв!</h5>
+      <h5 class="winnerAlert">Вибери іншу клітинку!</h5>
       <div class="button">Reset</div>
     </div>
     <div class="game"></div>
